[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.9.2",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello="Hello.hello:hello"  

main="Hello.hello:main" 
[tool.hatch.build.targets.wheel]
packages = ["src/Hello"]